resources/openshift/22_msr-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: msr-hello-world
  labels:
    name: msr-hello-world
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 5555
  selector:
    app: msr-hello-world
